test/fails/bad_parsing/bad_function3.lgl
void main() {
    return;
// Unmatched braces